--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Desktop/SpaceRoguelite/SpaceRoguelite.exe"
+export_path="../../../Desktop/TerminusRoguelike/Terminus.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -32,11 +32,11 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
 application/modify_resources=false
-application/icon=""
+application/icon="res://icon.png"
 application/file_version=""
 application/product_version=""
 application/company_name=""
-application/product_name=""
-application/file_description=""
-application/copyright=""
+application/product_name="Terminus Roguelike"
+application/file_description="Game Executable"
+application/copyright="Pavel Provotorov"
 application/trademarks=""
